--- a/demo/data_amount.html
+++ b/demo/data_amount.html
@@ -55,6 +55,9 @@
                             <li>
                                 <a href="data_actor.html">客户行为</a>
                             </li>
+                            <li>
+                                <a href="hot_product.html">热门咨询产品</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -117,6 +120,15 @@
                                     <select class="sch-input" name="" id="">
                                         <option value="">最近30天</option>
                                     </select>
+                                </div>
+                            </li>
+
+                            <li class="sch-item">
+                                <span class="sch-item-tit">时间段</span>
+                                <div class="sch-item-bd js-item-content">
+                                    <input class="txt txt-date" type="text"/>
+                                    -
+                                    <input class="txt txt-date" type="text"/>
                                 </div>
                             </li>
 
