--- a/demo/user.html
+++ b/demo/user.html
@@ -55,6 +55,9 @@
                             <li>
                                 <a href="data_actor.html">客户行为</a>
                             </li>
+                            <li>
+                                <a href="hot_product.html">热门咨询产品</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
