--- a/demo.html
+++ b/demo.html
@@ -1101,9 +1101,9 @@
         <i class="iconfont iconfont-close"></i>
     </div>
     <div class="pop-bd">
-        发送至：
+        发送给客服2：
           <p class="mate-txt">
-              <i class="iconfont iconfont-kefu"></i> 客服2
+              <i class="iconfont iconfont-user"></i> A客户
           </p>
     </div>
 
