--- a/demo/user_detail.html
+++ b/demo/user_detail.html
@@ -144,7 +144,11 @@
             <div class="msg-wrap">
 
                 <div class="msg-record">
-                    <div class="hd">焦点科技股份有限公司</div>
+                    <div class="hd">
+                        焦点科技股份有限公司
+
+                        <a href=""><img src="../img/tm.png" alt="" width="16px"/></a>
+                    </div>
                     <div class="bd">
 
                         <dl class="msg msg-in">
