--- a/demo.html
+++ b/demo.html
@@ -461,9 +461,9 @@
                         <div class="poptip-service">
                             <h4>选择客服</h4>
                             <ul class="mate-lst">
-                                <li>管理员</li>
-                                <li>客服1</li>
-                                <li>客服2</li>
+                                <li>管理员 <span class="mate-status-online">（在线）</span></li>
+                                <li>客服1 <span class="mate-status-busy">（忙碌）</span></li>
+                                <li>客服2 <span class="mate-status-afk">（离开）</span></li>
                                 <li>客服3</li>
                                 <li>客服4</li>
                                 <li>客服5</li>
