--- a/demo/user_detail.html
+++ b/demo/user_detail.html
@@ -150,6 +150,12 @@
                         <a href=""><img src="../img/tm.png" alt="" width="16px"/></a>
                     </div>
                     <div class="bd">
+                        <div class="msg-more">
+                            <a href="#">
+                                查看更多消息
+                            </a>
+                        </div>
+
 
                         <dl class="msg msg-in">
                             <dt>老王 2017-10-10 20:00:13</dt>
@@ -167,9 +173,7 @@
                         </div>
 
                     </div>
-                    <div class="msg-ft">
-                       查看更多 <i class="iconfont iconfont-arrow-btm"></i>
-                    </div>
+
                 </div>
 
 
