--- a/demo/data_service.html
+++ b/demo/data_service.html
@@ -145,7 +145,7 @@
 
             <ul class="tab tab-primary">
                 <li class="on"><a href="javascript:void(0)">客户量</a></li>
-                <li><a href="javascript:void(0)">对话量</a></li>
+                <li><a href="javascript:void(0)">消息量</a></li>
             </ul>
             <div class="tab-con">
                 <div class="tab-node on">
@@ -159,12 +159,10 @@
                             <col width="55"/>
                             <col width="70"/>
                             <col width="70"/>
-                            <col width="70"/>
                             <col width="115"/>
                             <col width="85"/>
                             <col width="105"/>
                             <col width="65"/>
-                            <col width="70"/>
                         </colgroup>
                         <tr>
                             <th>客服名称</th>
@@ -200,21 +198,6 @@
                             </th>
                             <th>
                                 发送消息量
-                                <div class="m-poptip">
-                                    <i class="iconfont iconfont-feedback"></i>
-                                    <div class="poptip poptip-warn">
-                                        <div class="poptip-bd">
-                                            弹出提示框
-                                        </div>
-                                        <span class="poptip-close">×</span>
-                                            <span class="arrow arrow-bottom">
-                                                <span class="arrow arrow-in"></span>
-                                            </span>
-                                    </div>
-                                </div>
-                            </th>
-                            <th>
-                                未回复人数
                                 <div class="m-poptip">
                                     <i class="iconfont iconfont-feedback"></i>
                                     <div class="poptip poptip-warn">
@@ -288,21 +271,6 @@
                                     </div>
                                 </div>
                             </th>
-                            <th>
-                                接收消息量
-                                <div class="m-poptip">
-                                    <i class="iconfont iconfont-feedback"></i>
-                                    <div class="poptip poptip-warn">
-                                        <div class="poptip-bd">
-                                            弹出提示框
-                                        </div>
-                                        <span class="poptip-close">×</span>
-                                            <span class="arrow arrow-bottom">
-                                                <span class="arrow arrow-in"></span>
-                                            </span>
-                                    </div>
-                                </div>
-                            </th>
                         </tr>
                         <tr>
                             <td>隔壁老王</td>
@@ -313,8 +281,6 @@
                             <td>10</td>
                             <td>10</td>
                             <td>10</td>
-                            <td>10</td>
-                            <td>100</td>
                         </tr>
                     </table>
                 </div>
