--- a/demo/user_detail.html
+++ b/demo/user_detail.html
@@ -114,7 +114,7 @@
                 <div class="sch-main">
                     <ul class="sch-lst">
                         <li class="sch-item">
-                            <span class="sch-item-tit">最近对话时间</span>
+                            <span class="sch-item-tit">对话日期</span>
 
                             <div class="sch-item-bd flt-date">
                                 <input type="text" class="txt txt-date" readonly="">
