--- a/demo/service.html
+++ b/demo/service.html
@@ -131,8 +131,9 @@
                     </li>
                 </ul>
                 <div class="setting-ope">
-                    <button class="btn btn-s btn-info">添加</button>
                     <button class="btn btn-s btn-blank">修改</button>
+                    <button class="btn btn-s btn-info" style="display: none">确定</button>
+                    <button class="btn btn-s btn-blank" style="display: none">取消</button>
                 </div>
 
 
@@ -147,8 +148,8 @@
             <div class="main-bd main-bd-setting">
                 <div class="set">
                     <ul class="switch">
-                        <li>开启</li>
-                        <li class="on">关闭</li>
+                        <li class="on">开启</li>
+                        <li>关闭</li>
                     </ul>
                 </div>
                 <div class="fold">
