--- a/demo.html
+++ b/demo.html
@@ -325,6 +325,57 @@
                 </div><!-- /msg-out -->
 
 
+
+
+                <div class="clearfix">
+                    <div class="msg msg-out">
+                        <div class="msg-content">
+                            <div class="avatar">
+                                <img src="img/avatar.jpg" alt=""/>
+                            </div>
+                            <div class="content">
+                                <dl class="transfer">
+                                    <dt>
+                                        <i class="iconfont iconfont-user"></i>
+                                        昆山通力电梯有限公司
+                                    </dt>
+                                    <dd>
+                                        <a href="#" class="btn btn-s btn-blank">立即联系</a>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- /msg-out -->
+
+
+
+
+                <div class="clearfix">
+                    <div class="msg msg-in">
+                        <div class="msg-content">
+                            <div class="avatar">
+                                <img src="img/avatar.jpg" alt=""/>
+                            </div>
+                            <div class="content">
+                                <dl class="transfer">
+                                    <dt>
+                                        <i class="iconfont iconfont-user"></i>
+                                        昆山通力电梯有限公司
+                                    </dt>
+                                    <dd>
+                                        <a href="#" class="btn btn-s btn-blank">立即联系</a>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- /msg-in -->
+
+
+
+
+
                 <div class="clearfix">
                     <div class="msg msg-in">
                         <div class="msg-content">
