--- a/demo/service.html
+++ b/demo/service.html
@@ -115,13 +115,13 @@
                     <li class="field">
                         <label for="" class="field-tit">欢迎语：</label>
                         <div class="field-bd">
-                            <input class="txt txt-xl" type="text" placeholder="50字以内"/>
+                            <textarea class="ta txt" name="" id="" cols="30" rows="10"  placeholder="50字以内"></textarea>
                         </div>
                     </li>
                     <li class="field">
                         <label for="" class="field-tit">离线留言：</label>
                         <div class="field-bd">
-                            <input class="txt txt-xl" type="text" placeholder="50字以内"/>
+                            <textarea class="ta txt" name="" id="" cols="30" rows="10"  placeholder="50字以内"></textarea>
                             <div class="form-error">
                                 <i class="iconfont iconfont-delete"></i>
                                 <p>邮箱格式错误，请填写正确的邮箱格式。</p>
