--- a/demo.html
+++ b/demo.html
@@ -336,7 +336,7 @@
                             <div class="content">
                                 <dl class="transfer">
                                     <dt>
-                                        <i class="iconfont iconfont-user"></i>
+                                        <img src="img/avatar.jpg" alt=""/>
                                         昆山通力电梯有限公司
                                     </dt>
                                     <dd>
@@ -360,7 +360,7 @@
                             <div class="content">
                                 <dl class="transfer">
                                     <dt>
-                                        <i class="iconfont iconfont-user"></i>
+                                        <img src="img/avatar.jpg" alt=""/>
                                         昆山通力电梯有限公司
                                     </dt>
                                     <dd>
@@ -1154,7 +1154,7 @@
     <div class="pop-bd">
         发送给客服2：
           <p class="mate-txt">
-              <i class="iconfont iconfont-user"></i> A客户
+              <img src="img/avatar.jpg" alt=""> A客户
           </p>
     </div>
 
