--- a/demo/user_detail.html
+++ b/demo/user_detail.html
@@ -117,9 +117,9 @@
                             <span class="sch-item-tit">对话日期</span>
 
                             <div class="sch-item-bd flt-date">
-                                <input type="text" class="txt txt-date" readonly="">
+                                <input type="text" class="txt txt-date" readonly="" value="2017-01-02">
                                 <span> - </span>
-                                <input type="text" class="txt txt-date" readonly="">
+                                <input type="text" class="txt txt-date" readonly="" value="2017-01-02">
                             </div>
                         </li>
                         <li class="sch-item">
