--- a/demo.html
+++ b/demo.html
@@ -515,7 +515,7 @@
                                 <li>管理员 <span class="mate-status-online">（在线）</span></li>
                                 <li>客服1 <span class="mate-status-busy">（忙碌）</span></li>
                                 <li>客服2 <span class="mate-status-afk">（离开）</span></li>
-                                <li>客服3</li>
+                                <li>客服3 <span class="mate-status-offline">（离线）</span></li>
                                 <li>客服4</li>
                                 <li>客服5</li>
                             </ul>
