--- a/demo/data_area.html
+++ b/demo/data_area.html
@@ -155,6 +155,13 @@
                 <!-- /fold -->
 
 
+
+                <div class="tip tip-nor tip-info">
+                    <i class="iconfont iconfont-infomation"></i>
+                    <div class="tip-hd"> 暂无数据</div>
+                </div>
+
+
             </div>
         </div>
         <!-- S main-wrap-->
